better data handeling

--- a/CXR_denoiser.ipynb
+++ b/CXR_denoiser.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/nix-shell.Pm1jxz/ipykernel_30505/1695865292.py:24: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "/tmp/nix-shell.kctMDA/ipykernel_44445/2385566773.py:25: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  from tqdm.autonotebook import tqdm\n"
      ]
     }
@@ -40,9 +40,8 @@
     "from torch.utils.data import Dataset\n",
     "import time\n",
     "import datetime\n",
+    "import pickle\n",
     "\n",
-    "from pyutils.lazynoisedataset import LazyNoiseDataset\n",
-    "from pyutils.distdataset import DistDataset\n",
     "\n",
     "\n",
     "from tqdm.autonotebook import tqdm\n",
@@ -67,35 +66,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# building dataset\n",
-      " - 7727 datapoints from  cheXpert/cxp_cxrs000.pt\n",
-      " - 7660 datapoints from  cheXpert/cxp_cxrs001.pt\n",
-      " - 7753 datapoints from  cheXpert/cxp_cxrs002.pt\n"
+      "[cxr_imgs pickle dir '/home/morris/Workspace/Python/xjobb/data/cheXpert/cxr_imgs_dataset.pickle']\n",
+      "loading pickle...\n",
+      "noise dataset len:  191027\n",
+      "  train noise dataset len:  1000\n",
+      "  test  noise dataset len:  250\n"
      ]
     }
    ],
    "source": [
     "# my utils\n",
-    "from pyutils.lazynoisedataset import LazyNoiseDataset\n",
-    "from pyutils.distdataset import DistDataset, SplitDataset\n",
     "\n",
+    "\n",
+    "#import data\n",
+    "#import data.datahandlers\n",
+    "#print(data.datahandlers)\n",
+    "\n",
+    "#from pyutils.distdataset import DistDataset, SplitDataset\n",
+    "#from pyutils.lazynoisedataset import LazyNoiseDataset\n",
+    "import data.datahandlers as datahandlers\n",
+    "\n",
+    "\n",
+    "from data.datahandlers import LazyNoiseDataset, DistDataset, SplitDataset\n",
     "from torch.utils.data import DataLoader\n",
+    "import pickle\n",
+    "import os\n",
+    "\n",
     "\n",
     "# loading dataset\n",
-    "cxr_images = DistDataset(\"cheXpert/cxp_cxrs{:03}.pt\", 3)\n",
-    "noise_dataset = LazyNoiseDataset(cxr_images)\n",
+    "cxr_imgs_dataset: DistDataset = None\n",
+    "\n",
+    "# pickle!\n",
+    "\n",
+    "\n",
+    "\n",
+    "dirname = os.getcwd()\n",
+    "cxr_imgs_pickle_dir = dirname + \"/data/cheXpert/cxr_imgs_dataset.pickle\"\n",
+    "print(\"[cxr_imgs pickle dir '{}']\".format(cxr_imgs_pickle_dir))\n",
+    "\n",
+    "if not os.path.isfile(cxr_imgs_pickle_dir):\n",
+    "    print(\"building new dataset - no pickle found\")\n",
+    "    cxr_imgs_dataset = DistDataset( dirname + \"/data/cheXpert/cxr_imgs{:03}.pt\")\n",
+    "    \n",
+    "    with open(cxr_imgs_pickle_dir, \"wb\") as f:\n",
+    "        pickle.dump(cxr_imgs_dataset, f)\n",
+    "        print(\"  dumped pickle!\" )\n",
+    "\n",
+    "\n",
+    "\n",
+    "with open(cxr_imgs_pickle_dir, \"rb\") as f:\n",
+    "    print(\"loading pickle...\")\n",
+    "    cxr_imgs_dataset = pickle.load(f)\n",
+    "    pass\n",
+    "#try: \n",
+    "#    print(\"trying to unpickle dataset\")\n",
+    "#    with open(\"data/cheXpert/cxr_imgs_dataset.pickle\", \"rb\") as f:\n",
+    "#        cxr_imgs_dataset = pickle.load(f)\n",
+    "#except:\n",
+    "#    print(\"building new dataset - unpickling failed\")\n",
+    "#    cxr_imgs_dataset = DistDataset(\"../cheXpert/cxp_cxrs{:03}.pt\")\n",
+    "#\n",
+    "#    with open(\"data/cheXpert/cxr_imgs_dataset.pickle\", \"wb\") as f:\n",
+    "#        pickle.dump(cxr_imgs_dataset, f)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "noise_dataset = LazyNoiseDataset(cxr_imgs_dataset)\n",
     "#noise_dataset = LazyNoiseDataset.from_distdataset_pickle(\"pyutils/pickles/cxrdataset.pickle\")\n",
     "\n",
+    "print(\"noise dataset len: \", len(noise_dataset))\n",
     "\n",
-    "train_noise_dataset = SplitDataset(noise_dataset, split_end=1000)\n",
-    "test_noise_dataset  = SplitDataset(noise_dataset, split_start=1000, split_end=1250)\n",
+    "train_noise_dataset = SplitDataset(noise_dataset, split_end=100)\n",
+    "test_noise_dataset  = SplitDataset(noise_dataset, split_start=100, split_end=125)\n",
+    "\n",
+    "print(\"  train noise dataset len: \", len(train_noise_dataset))\n",
+    "print(\"  test  noise dataset len: \", len(test_noise_dataset))\n",
+    "\n",
     "\n",
     "\n",
     "#train_noise_dataset = SplitDataset(noise_dataset, split_end=len(noise_dataset) * 0.8)\n",
@@ -108,87 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/nix/store/zmim4ghaaa5zmnw8vxrvz4b768bz9sgy-python3-3.10.13-env/lib/python3.10/site-packages/torchinfo/torchinfo.py:477: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  action_fn=lambda data: sys.getsizeof(data.storage()),\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "==========================================================================================\n",
-       "Layer (type:depth-idx)                   Output Shape              Param #\n",
-       "==========================================================================================\n",
-       "UNet                                     [1, 1, 320, 320]          --\n",
-       "├─ModuleList: 1-7                        --                        (recursive)\n",
-       "│    └─DoubleConv: 2-1                   [1, 64, 320, 320]         --\n",
-       "│    │    └─Sequential: 3-1              [1, 64, 320, 320]         37,824\n",
-       "├─MaxPool2d: 1-2                         [1, 64, 160, 160]         --\n",
-       "├─ModuleList: 1-7                        --                        (recursive)\n",
-       "│    └─DoubleConv: 2-2                   [1, 128, 160, 160]        --\n",
-       "│    │    └─Sequential: 3-2              [1, 128, 160, 160]        221,952\n",
-       "├─MaxPool2d: 1-4                         [1, 128, 80, 80]          --\n",
-       "├─ModuleList: 1-7                        --                        (recursive)\n",
-       "│    └─DoubleConv: 2-3                   [1, 256, 80, 80]          --\n",
-       "│    │    └─Sequential: 3-3              [1, 256, 80, 80]          886,272\n",
-       "├─MaxPool2d: 1-6                         [1, 256, 40, 40]          --\n",
-       "├─ModuleList: 1-7                        --                        (recursive)\n",
-       "│    └─DoubleConv: 2-4                   [1, 512, 40, 40]          --\n",
-       "│    │    └─Sequential: 3-4              [1, 512, 40, 40]          3,542,016\n",
-       "├─MaxPool2d: 1-8                         [1, 512, 20, 20]          --\n",
-       "├─DoubleConv: 1-9                        [1, 1024, 20, 20]         --\n",
-       "│    └─Sequential: 2-5                   [1, 1024, 20, 20]         --\n",
-       "│    │    └─Conv2d: 3-5                  [1, 1024, 20, 20]         4,719,616\n",
-       "│    │    └─BatchNorm2d: 3-6             [1, 1024, 20, 20]         2,048\n",
-       "│    │    └─ReLU: 3-7                    [1, 1024, 20, 20]         --\n",
-       "│    │    └─Conv2d: 3-8                  [1, 1024, 20, 20]         9,438,208\n",
-       "│    │    └─BatchNorm2d: 3-9             [1, 1024, 20, 20]         2,048\n",
-       "│    │    └─ReLU: 3-10                   [1, 1024, 20, 20]         --\n",
-       "├─ModuleList: 1-16                       --                        (recursive)\n",
-       "│    └─ConvTranspose2d: 2-6              [1, 512, 40, 40]          2,097,664\n",
-       "├─ModuleList: 1-17                       --                        (recursive)\n",
-       "│    └─DoubleConv: 2-7                   [1, 512, 40, 40]          --\n",
-       "│    │    └─Sequential: 3-11             [1, 512, 40, 40]          7,080,960\n",
-       "├─ModuleList: 1-16                       --                        (recursive)\n",
-       "│    └─ConvTranspose2d: 2-8              [1, 256, 80, 80]          524,544\n",
-       "├─ModuleList: 1-17                       --                        (recursive)\n",
-       "│    └─DoubleConv: 2-9                   [1, 256, 80, 80]          --\n",
-       "│    │    └─Sequential: 3-12             [1, 256, 80, 80]          1,771,008\n",
-       "├─ModuleList: 1-16                       --                        (recursive)\n",
-       "│    └─ConvTranspose2d: 2-10             [1, 128, 160, 160]        131,200\n",
-       "├─ModuleList: 1-17                       --                        (recursive)\n",
-       "│    └─DoubleConv: 2-11                  [1, 128, 160, 160]        --\n",
-       "│    │    └─Sequential: 3-13             [1, 128, 160, 160]        443,136\n",
-       "├─ModuleList: 1-16                       --                        (recursive)\n",
-       "│    └─ConvTranspose2d: 2-12             [1, 64, 320, 320]         32,832\n",
-       "├─ModuleList: 1-17                       --                        (recursive)\n",
-       "│    └─DoubleConv: 2-13                  [1, 64, 320, 320]         --\n",
-       "│    │    └─Sequential: 3-14             [1, 64, 320, 320]         110,976\n",
-       "├─Conv2d: 1-18                           [1, 1, 320, 320]          65\n",
-       "==========================================================================================\n",
-       "Total params: 31,042,369\n",
-       "Trainable params: 31,042,369\n",
-       "Non-trainable params: 0\n",
-       "Total mult-adds (G): 85.27\n",
-       "==========================================================================================\n",
-       "Input size (MB): 0.41\n",
-       "Forward/backward pass size (MB): 898.66\n",
-       "Params size (MB): 124.17\n",
-       "Estimated Total Size (MB): 1023.24\n",
-       "=========================================================================================="
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyutils.myUNet import UNet\n",
     "\n",
@@ -201,44 +177,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "==========================================================================================\n",
-       "Layer (type:depth-idx)                   Output Shape              Param #\n",
-       "==========================================================================================\n",
-       "Autoencoder                              [1, 320, 320]             --\n",
-       "├─Sequential: 1-1                        [32, 80, 80]              --\n",
-       "│    └─Conv2d: 2-1                       [16, 320, 320]            160\n",
-       "│    └─ReLU: 2-2                         [16, 320, 320]            --\n",
-       "│    └─MaxPool2d: 2-3                    [16, 160, 160]            --\n",
-       "│    └─Conv2d: 2-4                       [32, 160, 160]            4,640\n",
-       "│    └─ReLU: 2-5                         [32, 160, 160]            --\n",
-       "│    └─MaxPool2d: 2-6                    [32, 80, 80]              --\n",
-       "├─Sequential: 1-2                        [1, 320, 320]             --\n",
-       "│    └─ConvTranspose2d: 2-7              [16, 160, 160]            4,624\n",
-       "│    └─ReLU: 2-8                         [16, 160, 160]            --\n",
-       "│    └─ConvTranspose2d: 2-9              [1, 320, 320]             145\n",
-       "│    └─Sigmoid: 2-10                     [1, 320, 320]             --\n",
-       "==========================================================================================\n",
-       "Total params: 9,569\n",
-       "Trainable params: 9,569\n",
-       "Non-trainable params: 0\n",
-       "Total mult-adds (M): 36.46\n",
-       "==========================================================================================\n",
-       "Input size (MB): 0.41\n",
-       "Forward/backward pass size (MB): 23.76\n",
-       "Params size (MB): 0.04\n",
-       "Estimated Total Size (MB): 24.20\n",
-       "=========================================================================================="
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the autoencoder architecture\n",
     "class Autoencoder(nn.Module):\n",
@@ -288,15 +227,15 @@
     "        return x\n",
     "\n",
     "\n",
-    "m = Autoencoder()\n",
-    "m = m.to(device)\n",
-    "torchinfo.summary(m, noise_dataset[0][0].shape)\n",
+    "#m = Autoencoder()\n",
+    "#m = m.to(device)\n",
+    "#torchinfo.summary(m, noise_dataset[0][0].shape)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
