--- a/CXR_denoiser.ipynb
+++ b/CXR_denoiser.ipynb
@@ -4,23 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Device: cpu\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/nix-shell.kctMDA/ipykernel_44445/2385566773.py:25: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -66,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +60,8 @@
       "[cxr_imgs pickle dir '/home/morris/Workspace/Python/xjobb/data/cheXpert/cxr_imgs_dataset.pickle']\n",
       "loading pickle...\n",
       "noise dataset len:  191027\n",
-      "  train noise dataset len:  1000\n",
-      "  test  noise dataset len:  250\n"
+      "  train noise dataset len:  100\n",
+      "  test  noise dataset len:  25\n"
      ]
     }
    ],
@@ -164,7 +148,85 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/nix/store/zmim4ghaaa5zmnw8vxrvz4b768bz9sgy-python3-3.10.13-env/lib/python3.10/site-packages/torchinfo/torchinfo.py:477: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  action_fn=lambda data: sys.getsizeof(data.storage()),\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "UNet                                     [1, 1, 320, 320]          --\n",
+       "├─ModuleList: 1-7                        --                        (recursive)\n",
+       "│    └─DoubleConv: 2-1                   [1, 64, 320, 320]         --\n",
+       "│    │    └─Sequential: 3-1              [1, 64, 320, 320]         37,824\n",
+       "├─MaxPool2d: 1-2                         [1, 64, 160, 160]         --\n",
+       "├─ModuleList: 1-7                        --                        (recursive)\n",
+       "│    └─DoubleConv: 2-2                   [1, 128, 160, 160]        --\n",
+       "│    │    └─Sequential: 3-2              [1, 128, 160, 160]        221,952\n",
+       "├─MaxPool2d: 1-4                         [1, 128, 80, 80]          --\n",
+       "├─ModuleList: 1-7                        --                        (recursive)\n",
+       "│    └─DoubleConv: 2-3                   [1, 256, 80, 80]          --\n",
+       "│    │    └─Sequential: 3-3              [1, 256, 80, 80]          886,272\n",
+       "├─MaxPool2d: 1-6                         [1, 256, 40, 40]          --\n",
+       "├─ModuleList: 1-7                        --                        (recursive)\n",
+       "│    └─DoubleConv: 2-4                   [1, 512, 40, 40]          --\n",
+       "│    │    └─Sequential: 3-4              [1, 512, 40, 40]          3,542,016\n",
+       "├─MaxPool2d: 1-8                         [1, 512, 20, 20]          --\n",
+       "├─DoubleConv: 1-9                        [1, 1024, 20, 20]         --\n",
+       "│    └─Sequential: 2-5                   [1, 1024, 20, 20]         --\n",
+       "│    │    └─Conv2d: 3-5                  [1, 1024, 20, 20]         4,719,616\n",
+       "│    │    └─BatchNorm2d: 3-6             [1, 1024, 20, 20]         2,048\n",
+       "│    │    └─ReLU: 3-7                    [1, 1024, 20, 20]         --\n",
+       "│    │    └─Conv2d: 3-8                  [1, 1024, 20, 20]         9,438,208\n",
+       "│    │    └─BatchNorm2d: 3-9             [1, 1024, 20, 20]         2,048\n",
+       "│    │    └─ReLU: 3-10                   [1, 1024, 20, 20]         --\n",
+       "├─ModuleList: 1-16                       --                        (recursive)\n",
+       "│    └─ConvTranspose2d: 2-6              [1, 512, 40, 40]          2,097,664\n",
+       "├─ModuleList: 1-17                       --                        (recursive)\n",
+       "│    └─DoubleConv: 2-7                   [1, 512, 40, 40]          --\n",
+       "│    │    └─Sequential: 3-11             [1, 512, 40, 40]          7,080,960\n",
+       "├─ModuleList: 1-16                       --                        (recursive)\n",
+       "│    └─ConvTranspose2d: 2-8              [1, 256, 80, 80]          524,544\n",
+       "├─ModuleList: 1-17                       --                        (recursive)\n",
+       "│    └─DoubleConv: 2-9                   [1, 256, 80, 80]          --\n",
+       "│    │    └─Sequential: 3-12             [1, 256, 80, 80]          1,771,008\n",
+       "├─ModuleList: 1-16                       --                        (recursive)\n",
+       "│    └─ConvTranspose2d: 2-10             [1, 128, 160, 160]        131,200\n",
+       "├─ModuleList: 1-17                       --                        (recursive)\n",
+       "│    └─DoubleConv: 2-11                  [1, 128, 160, 160]        --\n",
+       "│    │    └─Sequential: 3-13             [1, 128, 160, 160]        443,136\n",
+       "├─ModuleList: 1-16                       --                        (recursive)\n",
+       "│    └─ConvTranspose2d: 2-12             [1, 64, 320, 320]         32,832\n",
+       "├─ModuleList: 1-17                       --                        (recursive)\n",
+       "│    └─DoubleConv: 2-13                  [1, 64, 320, 320]         --\n",
+       "│    │    └─Sequential: 3-14             [1, 64, 320, 320]         110,976\n",
+       "├─Conv2d: 1-18                           [1, 1, 320, 320]          65\n",
+       "==========================================================================================\n",
+       "Total params: 31,042,369\n",
+       "Trainable params: 31,042,369\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (G): 85.27\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.41\n",
+       "Forward/backward pass size (MB): 898.66\n",
+       "Params size (MB): 124.17\n",
+       "Estimated Total Size (MB): 1023.24\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pyutils.myUNet import UNet\n",
     "\n",
@@ -237,7 +299,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c67e82c5d200475fbd1e534cf54db95f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Options\n",
     "NUM_EPOCHS = 10\n",
