--- a/CXR_denoiser.ipynb
+++ b/CXR_denoiser.ipynb
@@ -483,6 +483,8 @@
     "testing_loss_hist = []\n",
     "testing_epoch_is = []\n",
     "\n",
+    "# ssim meassure\n",
+    "ssim = StructuralSimilarityIndexMeasure(data_range=1.0, reduction='sum')\n",
     "\n",
     "\n",
     "# Define the loss function and optimizer\n",
@@ -509,7 +511,7 @@
     "    train_loss = train_loss_acc / len(train_noise_dataloader)\n",
     "    training_loss_hist.append(train_loss)\n",
     "\n",
-    "\n",
+    "    \n",
     "    epoch_time = time.time() - last_epoch_time\n",
     "    last_epoch_time = time.time()\n",
     "\n",
@@ -518,13 +520,21 @@
     "        m.eval()\n",
     "\n",
     "        test_loss_acc = 0.0\n",
+    "        test_ssim_acc = 0.0\n",
+    "\n",
     "        for x_test_batch, y_test_batch in test_noise_dataloader:\n",
     "            output = m(x_test_batch.to(device))\n",
     "            loss = criterion(y_test_batch.to(device), output)\n",
     "            test_loss_acc += loss.item()\n",
     "\n",
+    "            ssim_mess = ssim(y_test_batch.to(device), output)\n",
+    "            test_ssim_acc += ssim_mess.item()\n",
+    "            \n",
+    "\n",
     "        test_loss = test_loss_acc / len(test_noise_dataloader)\n",
     "        testing_loss_hist.append(test_loss)\n",
+    "\n",
+    "        test_ssim = test_ssim_acc / len(test_noise_dataloader)\n",
     "\n",
     "\n",
     "        fig, axs = plt.subplots(NUM_IMG_EXAMPLES, 3, figsize=(3 * 2, NUM_IMG_EXAMPLES * 2))\n",
@@ -552,9 +562,10 @@
     "\"\"\"\n",
     "Epoch [{}/{}]\n",
     "Loss - Train: {:.4f}   Test: {:.4f}\n",
+    "SSIM - Test: {:4f}\n",
     "Time - since start: {:.1f}   this epoch: {:.1f}\n",
     "(note: 'since start' does include total testing...)\n",
-    "\"\"\".format(epoch+1, NUM_EPOCHS, train_loss, test_loss, time.time() - start_time, epoch_time))\n",
+    "\"\"\".format(epoch+1, NUM_EPOCHS, train_loss, test_loss, test_ssim, time.time() - start_time, epoch_time))\n",
     "\n",
     "\n",
     "plt.plot([i+1 for i in range(NUM_EPOCHS)], training_loss_hist, \"b:o\", label=\"Train Loss\")\n",
